...
                    Padding(
                      padding: const EdgeInsets.only(left: 60),
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.start,
                        children: [
                          ElevatedButton(
                            key: const ValueKey('tombol-halamanlapor-key'),
                            onPressed: () {
                              setState(() {
                                isLapor = true;
                              });
                            },
                            style: ElevatedButton.styleFrom(
...
                            ),
                            child: Container(
                              width: 70,
                              height: 20,
                              alignment: Alignment.center,
                              child: Text(
                                'Lapor',
                                style: TextStyle(
                                  color: isLapor ? Colors.white : Colors.black,
                                  fontSize: 16,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                            ),
                          ),
                          ElevatedButton(
                            key: const ValueKey('tombol-halamancari-key'),
                            onPressed: () {
                              setState(() {
                                isLapor = false;
                              });
                            },
                            style: ElevatedButton.styleFrom(
...
              children: [
                Row(
                  children: [
                    const Padding(
                      padding: EdgeInsets.only(top: 405, left: 25),
                      child: Text(
                        'List Barang',
                        style: TextStyle(
                          fontFamily: 'inter',
                          fontSize: 20,
                          fontWeight: FontWeight.bold,
                          color: Color(0xFFBB371A),
                        ),
...
                          border: Border.all(
                            color: const Color.fromARGB(255, 228, 226, 226),
                            width: 2,
                          ),
                        ),
                        child: IconButton(
                          key: const ValueKey('tombol-tambah-lapor-key'),
                          onPressed: () {
                            Navigator.push(
                              context,
                              PageRouteBuilder(
                                pageBuilder:
                                    (context, animation, secondaryAnimation) {
...
